update API 명세서